# Physics-and-Programming

./: .gitignore  README.md
Aerospace/AI in Space/: .gitignore  CMakeLists.txt  README.md  requirements.txt
Aerospace/AI in Space/cpp/apps/: rendezvous_cpp.cpp
Aerospace/AI in Space/notes/: first_project.md
Aerospace/AI in Space/papers/: ai_in_space_foundation.tex
Aerospace/AI in Space/python/: curriculum_eval.py  episode_viz.py  linear_q.py  policy_eval.py  q_learning.py  random_policy.py  rendezvous_env.py  rendezvous_sim.py
Aerospace/AI in Space/scripts/: benchmark.py  smoke_test.py
Aerospace/AI in Space/tests/: conftest.py  test_rendezvous_env.py
AstroPhysics/: 4th_dimension_viz.cpp  CMakeLists.txt  Quantum.cpp  aerodynamics_viz.cpp  angular_momentum_viz.cpp  atom_viz.py  atomic_bomb_viz.cpp  black_hole_accretion_beaming_viz.cpp  blackhole_viz.cpp  cmakew.sh  collision_bh_viz.cpp  collision_bh_viz.py  cosmic_expansion_sandbox_viz.cpp  damped_forced_oscillator_viz.cpp  dark_matter_viz.cpp  dark_matter_viz.py  doppler_eff_viz.cpp  double_pendulum_chaos_viz.cpp  double_pendulum_chaos_viz.py  double_slit_viz.cpp  electric charges interaction.cpp  electric field.cpp  enthropy_viz.cpp  fission_fusion_viz.cpp  fission_fusion_viz.py  fluid_mechanics_channel_viz.cpp  fluid_mechanics_channel_viz.py  fluid_vortex_viz.cpp  fluid_vortex_viz.py  galaxy_rotation_dark_matter_viz.cpp  gravitational_lensing_playground_viz.cpp  gravitational_lensing_viz.cpp  gravitational_lensing_viz.py  gravity_lagrange_viz.cpp  hawkin's_rad_viz.cpp  hawking_particles_escape_viz.cpp  hydrogen_bomb_viz.cpp  hydrogen_bomb_viz.py  interferometer_gw_viz.cpp  maxwell_equations_viz.cpp  (+28 more)
AstroPhysics/Alice/: .gitignore  CMakeLists.txt  README.md  main.py  pyproject.toml  requirements.txt
AstroPhysics/Alice/alice/: __init__.py  app.py  brain.py  config.py  emotion_engine.py  executor.py  face_tracker.py  intent.py  llm_client.py  memory_store.py  self_updater.py  string_utils.py  types.py  ui.py  voice_listener.py
AstroPhysics/Alice/config/: allowed_paths.json
AstroPhysics/Alice/data/: alice_memory.db  alice_memory.db-shm  alice_memory.db-wal  alice_memory.tsv
AstroPhysics/Alice/examples/: hello_alice.cpp  hello_alice.py
AstroPhysics/Alice/resources/: AliceInfo.plist
AstroPhysics/Alice/src/: __init__.py  brain.cpp  brain.py  config.cpp  config.py  env_utils.py  executor.cpp  executor.py  face_tracker.py  face_tracker_macos.mm  face_tracker_stub.cpp  intent.cpp  intent.py  listener.py  llm_client.cpp  llm_client.py  main.cpp  main.py  memory_store.cpp  memory_store.py  nlu.py  speaker.py  string_utils.cpp  ui.py  ui_macos.mm  ui_stub.cpp  voice_listener_macos.mm  voice_listener_stub.cpp  web_search.py
AstroPhysics/DefensiveSys/: hand_turret_sim.py
AstroPhysics/astronomy/: artemis_voyager_missions_viz.cpp  exoplanet_transit_lab_viz.cpp  galaxy_rotation_dark_matter_viz.cpp  hr_diagram_evolution_viz.cpp
AstroPhysics/build-cmake/: vision_astro_interactions_3d_cpp
AstroPhysics/build-native/: 4th_dimension_viz_cpp  atom_viz_cpp  atomic_bomb_viz_cpp  blackhole_viz_cpp  build_results.tsv  collision_bh_viz_cpp  damped_forced_oscillator_viz_cpp  dark_matter_viz_cpp  doppler_eff_viz_cpp  electric_charges_interaction_cpp  fission_fusion_viz_cpp  fluid_mechanics_channel_viz_cpp  gravitational_lensing_viz_cpp  gravity_lagrange_viz_cpp  maxwell_equations_viz_cpp  newton_laws_viz_cpp  particle_acc_viz_cpp  pulsar_viz_cpp  quantum_cpp  quantum_particle_viz_cpp  quantum_wave_viz_cpp  relativistic_time_dilation_viz_cpp  simple_harmonic_oscillator_viz_cpp  solar_system_spacetime_viz_cpp  sun_planet_spacetime_viz_cpp  two_body_orbit_viz_cpp  uncertainty_wavepacket_viz_cpp  wormhole_viz_cpp
AstroPhysics/electromagnetism/: electric charges interaction.cpp  electric field.cpp  em_helical_poynting_viz.cpp  maxwell_equations_viz.cpp  maxwell_wave_viz.cpp
AstroPhysics/fluids/: fluid_mechanics_channel_viz.cpp  fluid_vortex_viz.cpp
AstroPhysics/gravity/: HOLOGRAPHIC_PRINCIPLE.md  blackhole_realism_viz.cpp  blackhole_viz.cpp  dual_black_white_hole_viz.cpp  holographic_principle_viz.cpp  interferometer_gw_viz.cpp  solar_system_spacetime_viz.cpp  sun_planet_spacetime_viz.cpp  three_body_problem_viz.cpp  wormhole_gateway_viz.cpp  wormhole_viz.cpp
AstroPhysics/mathematics/: README.md  equation_solver_animation.py  newton_function_animation.py
AstroPhysics/mechanics/: angular_momentum_viz.cpp  damped_forced_oscillator_viz.cpp  double_pendulum_chaos_viz.cpp  hand_biomechanics_viz.cpp  hand_tesla_coil_viz.cpp
AstroPhysics/nuclear/: hydrogen_bomb_viz.cpp  nuclear_power_plant_viz.cpp
AstroPhysics/optics/: hand_optics_scenes.py
AstroPhysics/particle_physics/: feynman_diagram_simulator.cpp  higgs_field_viz.cpp  particle_entang_viz.cpp
AstroPhysics/plasma/: tokamak_confinement_viz.cpp
AstroPhysics/quantum/: Quantum.cpp  probability_field_wave_merge_viz.cpp  quantum_particle_viz.cpp  quantum_slit_wave_viz.cpp  quantum_wave_viz.cpp
AstroPhysics/research/: .gitignore  README.md
AstroPhysics/research/cpp/: README.md
AstroPhysics/research/experiments/: simulation_design.md
AstroPhysics/research/notes/: assumptions.md  derivation_notes.md  literature_map.md  model_assumptions.md  presentation_notes.md
AstroPhysics/research/paper/: build_preview_pdf.py  equation_explainer.tex  macros.tex  main.tex  references.bib
AstroPhysics/research/tests/: test_asf_python.py  test_cislunar_nav.py
AstroPhysics/tools/: build_vision_astro_renderer.sh
AstroPhysics/vision/: body_exoskeleton_tracker.py  body_exosuit_scene.cpp  body_pose_bridge.py  floating_electromagnetic_hands.py  floating_hand_avatar.py  floating_optics_hands.py  hand_biomechanics_bridge.py  hand_heat_transfer.py  hand_optics_runner.py  hand_planet_overlay.py  hand_tracking_scene_shared.h  hologram_control.py  holographic_principle_bridge.py  live_controls.txt  tesla_coil_hand_tracker.py  webcam_finger_tracker.py  webcam_lidar_scan.py
AstroPhysics/vision/render3d/: README.md  astro_interactions_renderer_3d.cpp
CyberTools/: Directory Snapshot Diff.py  (+9 more)
(+238 files in other folders)
