[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alice-assistant"
version = "0.1.0"
description = "Alice assistant rewritten in Python"
requires-python = ">=3.10"

[project.optional-dependencies]
voice = ["SpeechRecognition>=3.10", "sounddevice>=0.5.0", "numpy>=2.0"]

[project.scripts]
alice = "alice.app:main"
